Now showing header with logout button - login problem due to capital letter in group chat

--- a/index.html
+++ b/index.html
@@ -30,7 +30,23 @@
     </script>
 </head>
 <body>
+    <!-- <div class="navbar navbar-fixed-top navbar-inverse">
+        <div class="navbar-inner">
+            <a class="brand">
+                Common Knowledge - Notes
+            </a>
+            <div id="group-label-container"></div>
+            <div id="logout-container"></div>
+        </div>
+    </div> -->
     <header>
+        <div class="navbar-inner">
+            <a class="brand">
+                EvoRoom 4
+            </a>
+            <div id="group-label-container"></div>
+            <div id="logout-container"></div>
+        </div>
         <div class="progressbar day1 hide">
             <div class="indicator">1. Orientation</div>
             <div class="indicator">2. Rotation I</div>
