--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="initial-scale=1, minimum-scale=1, maximum-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
+
+    <link href="js/sail.js/css/sail.css" rel="stylesheet" type="text/css" />
+    <link href="css/deps/jquery-ui.css" rel="stylesheet" type="text/css" />
+    <link href="css/evoroom.css" rel="stylesheet" type="text/css" /> 
+    <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
   
         
     <script src="js/sail.js/load.js" type="text/javascript"></script>
@@ -23,10 +28,6 @@
             .then('js/deps/jquery.toastmessage.js')
             .thenRun(function() { return Sail.init(new EvoRoom.Mobile()); });  
     </script>
-        <link href="js/sail.js/css/sail.css" rel="stylesheet" type="text/css" />
-    <link href="css/jquery-ui.css" rel="stylesheet" type="text/css" />
-    <link href="css/evoroom.css" rel="stylesheet" type="text/css" /> 
-    <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
 </head>
 <body>
     <!-- <div class="navbar navbar-fixed-top navbar-inverse">
