--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link href="js/sail.js/css/sail.css" rel="stylesheet" type="text/css" />
     <link href="css/deps/jquery-ui.css" rel="stylesheet" type="text/css" />
-    <link href="css/evoroom.css" rel="stylesheet" type="text/css" /> 
+    <link href="css/evoroom.css" rel="stylesheet" type="text/css" />
 
     <script src="js/sail.js/load.js" type="text/javascript"></script>
     <script src="js/sail.js/sail.js" type="text/javascript"></script>
@@ -60,6 +60,8 @@
             <div class="content">Once all team members have scanned in at the location you will receive additional information to proceed.</div>
             <img class="loader-gif" src="loader.gif" alt="Loader image indicating waiting">
         </div>
+
+        <!-- PHASE 1 -->
 
         <div id="log-in-success" class="text-box-medium" style="display: none">
             <div class="title-container">Log in successful</div>
