rotation-instructions screen

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <img class="loader-gif" src="loader.gif" alt="Loader image indicating waiting">
         </div>
 
-        <!-- PHASE 1 -->
+        <!-- WELCOME PHASE -->
 
         <div id="log-in-success" class="text-box-medium" style="display: none">
             <div class="title-container">Log in successful</div>
@@ -86,6 +86,23 @@
             <button class="small-button">Next</button>
         </div>
 
+        <!-- ROTATION 1 (/2?) -->
+        <!-- maybe add a roation 1 class, rotation 2 class, etc -->
+
+        <div id="rotation-instructions" class="text-box-medium" style="display: none">
+            <div class="title-container">
+                <b>Instructions: </b>There are four different versions of Southeast Asia set at different times in this room: <span class="dynamic-text">200, 150, 100, and 50 mya</span>.
+            </div>
+            <div class="body-container-medium">
+                When you click &rsquo;Next&rsquo; you will be assigned an organism. Your task is to determine whether your organism is present at the time periods and if not, whether their ancestral forms are present. Once you are done, another organism will be assigned to you until all of the organisms are complete.
+            </div>
+            <button class="small-button" style="display: none">Next</button>
+        </div>
+
+
+
+
+
         <div class="text-box-medium" style="display: none">
             <div class="title-container">Welcome to the simulation lab</div>
             <div class="body-container-medium">
@@ -102,8 +119,6 @@
             </div>
             <button class="small-button">Next</button>
         </div>
-
-
 
 
         
