--- a/index.html
+++ b/index.html
@@ -29,13 +29,15 @@
     <header>
         <div>
             <div id="step-container">
-                <b>EvoRoom:</b> Step <span id="step-number">X</span> of 6
+                <b>EvoRoom:</b> Step <span id="phase-number-container">0</span> of 7
             </div>
             <div id="logout-container"></div>
         </div>
     </header>
 
     <div id="evoroom">
+
+        <button id="start-rotation-1">START ROTATION 1</button>
          
         <div id="loading-page" class="text-box-medium" style="display: none">
             <div class="title"><b>Please wait...</b></div>
@@ -49,7 +51,7 @@
             <img class="loader-gif" src="loader.gif" alt="Loader image indicating waiting">
         </div>
 
-        <!-- WELCOME PHASE -->
+        <!-- ORIENTATION PHASE -->
 
         <div id="log-in-success" class="text-box-medium" style="display: none">
             <div class="title-container">Log in successful</div>
@@ -81,8 +83,8 @@
         <!-- maybe add a roation 1 class, rotation 2 class, etc -->
 
         <div id="rotation-instructions" class="text-box-medium" style="display: none">
-            <div class="title-container">
-                <b>Instructions: </b>There are four different versions of Southeast Asia set at different times in this room: <span class="dynamic-text">200, 150, 100, and 50 mya</span>.
+            <div>
+                <b>Instructions:</b> There are four different versions of Southeast Asia set at different times in this room: <span class="dynamic-text">200, 150, 100, and 50 mya</span>.
             </div>
             <div class="body-container-medium">
                 When you click &rsquo;Next&rsquo; you will be assigned an organism. Your task is to determine whether your organism is present at the time periods and if not, whether their ancestral forms are present. Once you are done, another organism will be assigned to you until all of the organisms are complete.
