--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <div id="evoroom">
 
-        <button id="start-rotation-1">START ROTATION 1</button>
+<!--         <button id="start-rotation-1">START ROTATION 1</button> -->
          
         <div id="loading-page" class="text-box-medium" style="display: none">
             <div class="title"><b>Please wait...</b></div>
