syncing up - restructured UI bindings

--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
                 <div>For this exercise, you will be working with people from various specialties as a team. Your team should have at least one expert from each of the specialty groups.</div>
                 <br />
                 <div>Team assignment:</div>
-                <div class="team-name dynamic-text indented-text"></div>
+                <div id="team-name-container" class="dynamic-text indented-text"></div>
                 <br />
                 <div>Team members:</div>
-                <div class="team-members"></div>
+                <div id="team-members-container"></div>
             </div>
             <button class="small-button">Next</button>
         </div>
