--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
                 <div>When you click "Next" you will be assigned an organism. Your task is to determine whether your organism is present at the time periods and if not, whether its ancestral forms are present</div>
                 <div>When you are done, another organism will be assigned to you until all of the organisms are complete.</div>
             </div>
-            <button class="small-button button" style="display:none">Next</button>
+            <button class="small-button button">Next</button>
+            <!-- style="display:none" -->
         </div>
 
         <div id="guide-instructions-1" class="text-box-medium" style="display:none">
@@ -128,54 +129,56 @@
             <div class="title-container"><b>You've been selected as a guide for:</b></div>
 
             <div class="body-container-medium">
-                <div class="time dynamic-text"></div>
+                <div class="large-year-text time dynamic-text"></div>
                 <br />
                 <div>Please go to the station and help your peers to determine whether their organism is present at your time period. If not, help them find the organism's ancestral form.</div>
                 <br />
                 <div>Once the activity begins, a "Next" button will appear. This gives you access to a specialty field guide that has been created to assist you with this task.</div>
             </div>
-            <button class="small-button button" style="display:none">Next</button>
+            <button class="small-button button">Next</button>
+             <!-- style="display:none" -->
         </div>
 
-        <!-- ROTATION 1 (PHASE 1/3) -->
+        <!-- ROTATION (PHASE 1/3) -->
         <!-- maybe add a roation 1 class, rotation 2 class, etc -->        
 
         <div id="organism-presence" class="text-box-medium" style="display:none">
             <div class="title-container">
-                <b>Time: </b><span class="time dynamic-text"></span>
-            </div>
-            <br />
-            <div>
-                <b>Organism: </b><span class="assigned-organism"></span>
+                <div><b>Time: </b><span class="time dynamic-text"></span></div>
+                <div><b>Organism: </b><span class="assigned-organism"></span></div>
             </div>
             <div class="organism-choice-box jquery-radios">
                 <p>Is the organism present here?<p>
-                <input type="radio" id="org-present" name="radio" class="presence-choice-button" /><label for="org-present">Yes</label>
-                <input type="radio" id="org-not-present" name="radio" class="presence-choice-button" /><label for="org-not-present">No</label>
+                <input type="radio" id="org-present-button" name="radio" class="presence-choice-button" data-choice="yes" /><label for="org-present-button">Yes</label>
+                <input type="radio" id="org-not-present-button" name="radio" class="presence-choice-button" data-choice="no" /><label for="org-not-present-button">No</label>
             </div>
             <button class="small-button button" style="display:none"><b>Done</b></button>
         </div>
 
-
-
-        <div class="text-box-medium" style="display:none">
-            <div class="title-container">Welcome to the simulation lab</div>
-            <div class="body-container-medium">
-                Lots of text lots of text lots of text Lots of text lots of text lots of text Lots of text lots of text lots of text 
-                Lots of text lots of text lots of text Lots of text lots of text lots of text Lots of text lots of text lots of text 
-                Lots of text lots of text lots of text Lots of text lots of text lots of text Lots of text lots of text lots of text 
-                Lots of text lots of text lots of text Lots of text lots of text lots of text Lots of text lots of text lots of text 
-                Lots of text lots of text lots of text Lots of text lots of text lots of text Lots of text lots of text lots of text 
-                Lots of text lots of text lots of text Lots of text lots of text lots of text Lots of text lots of text lots of text 
-                Lots of text lots of text lots of text Lots of text lots of text lots of text Lots of text lots of text lots of text 
-                Lots of text lots of text lots of text Lots of text lots of text lots of text Lots of text lots of text lots of text 
-                Lots of text lots of text lots of text Lots of text lots of text lots of text Lots of text lots of text lots of text 
-                Lots of text lots of text lots of text Lots of text lots of text lots of text Lots of text lots of text lots of text 
+        <div id="ancestor-choice" class="text-box-large" style="display:none">
+            <div class="title-container">
+                <div><b>Time: </b><span class="time dynamic-text"></span></div>
+                <div><b>Organism: </b><span class="chosen-organism"></span></div>
+                <div><b>Present: </b>No</div>
             </div>
-            <button class="small-button button">Next</button>
+            <div class="body-container-large">
+                <div><b>Instructions: </b>Which of the following is most likely the organism&rsquo;s ancestor? Click on each organism to read more about it. Select your choice from the drop down menu.</div>
+                <table class="organism-table ancestor-information-table"></table>
+            </div>
+            <button class="small-button button"><b>Done</b></button>
         </div>
 
 
+        <div id="ancestor-description" class="text-box-medium" style="display:none">
+            <div class="title-container">
+                <div><b>Time: </b><span class="time dynamic-text"></span></div>
+                <div><b>Organism: </b><span class="organism"></span></div>
+            </div>
+            <div class="body-container-medium ancestor-description">
+                
+            </div>
+            <button class="small-button button">Back</button>
+        </div>
         
     </div>
 
