clickable tables, phase 1 guide complete for first lap

--- a/index.html
+++ b/index.html
@@ -175,12 +175,15 @@
 
 
         <div id="ancestor-description" class="text-box-medium" style="display:none">
+            <div class="ancestor-organism-container">
+                <img class="ancestor-organism-image" />
+            </div>
             <div class="title-container">
                 <div><b>Time: </b><span class="time dynamic-text"></span></div>
-                <div><b>Organism: </b><span class="organism"></span></div>
+                <div><b>Organism: </b><span class="ancestor-organism-text"></span></div>
             </div>
-            <div class="body-container-medium ancestor-description">
-                
+            <div class="body-container-medium">
+                <b>Description:</b><span class="ancestor-description-body"></span>
             </div>
             <button class="small-button button">Back</button>
         </div>
