rotation code complete

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div id="team-name-container" class="dynamic-text indented-text"></div>
                 <br />
                 <div>Team members:</div>
-                <div id="team-members-container"></div>
+                <div class="team-members-container"></div>
             </div>
             <button class="small-button button">Next</button>
         </div>
@@ -197,7 +197,24 @@
             </div>
         </div>
 
-
+        <!-- BOTH -->
+        <div id="rotation-complete" class="text-box-medium" style="display:none">
+            <div class="title-container">
+                <span class="highlighted-text"><b>Your portion of the cladogram task is complete</b><span>
+            </div>
+            <div class="body-container-large">
+                <div><b>Instructions: </b>You just helped compllete a survey of the organisms at <span class="time-periods-text dynamic-text"></span>. When everyone is done, you will review this information in your teams.</div>
+                <br />
+                <div>Find your team members and meet up at:</div>
+                <div class="large-year-text time dynamic-text"></div>
+                <br />
+                <div>Team members:</div>
+                <div class="team-members-container"></div>
+                <br />
+                <div>If you are the first in your team to finish, take this time to review the cladogram.</div>
+            </div>
+            <button class="small-button button"><b>Next</b></button>
+        </div>
 
     </div>
 
