meetup particip mostly compeleted, set up explanations skeleton

--- a/index.html
+++ b/index.html
@@ -227,10 +227,20 @@
                 <button class="q3-button question-button button">Question 3</button>
                 <button class="info-button question-button button">Information</button>
             </div>
-
         </div>
 
-
+        <div id="note-response" class="text-box-large" style="display:none">
+            <div class="title-container">
+                <div><b>Instructions: </b>As a team, you will compare the environmental differences:</div>
+                <div class="large-year-text dynamic-text"></div>
+            </div>
+            <div>Discuss the following with your group members and record your answer below. Please note that only one person per group should submit an answer, otherwise your answer will be lost</div>
+            <br />
+            <div id="question-text"></div>
+            <input class="note-entry"></input>
+            <button class="back-button note-button button"><b>Back</b></button>
+            <button class="done-button note-button button"><b>Done</b></button>
+        </div>
 
     </div>
 
