added expl sections for Armin to work on

--- a/index.html
+++ b/index.html
@@ -242,6 +242,9 @@
             <button class="done-button note-button button"><b>Done</b></button>
         </div>
 
+
+        <!-- //////////// EXPLANATION (PHASE 6?) //////////// -->
+
     </div>
 
 </body>
