started completion of meetup

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <header>
         <div>
             <div id="step-container">
-                <b>EvoRoom:</b> Step <span id="phase-number-container">0</span> of 7
+                <b>EvoRoom:</b> Step <span id="phase-number-container">0</span> of 6
             </div>
             <div id="logout-container"></div>
         </div>
@@ -231,13 +231,13 @@
 
         <div id="note-response" class="text-box-large" style="display:none">
             <div class="title-container">
-                <div><b>Instructions: </b>As a team, you will compare the environmental differences:</div>
+                <div><b>Instructions: </b>As a team, you will compare the environmental differences between:</div>
                 <div class="large-year-text dynamic-text"></div>
             </div>
             <div>Discuss the following with your group members and record your answer below. Please note that only one person per group should submit an answer, otherwise your answer will be lost</div>
             <br />
             <div id="question-text"></div>
-            <input class="note-entry"></input>
+            <textarea class="note-entry"></textarea>
             <button class="back-button note-button button"><b>Back</b></button>
             <button class="done-button note-button button"><b>Done</b></button>
         </div>
