Changed id to work with pikachu uploading code

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                     </form>
                 </div>
                 <br />
-                <div><input type="file" name="photo-from-device" id="photo-from-device" class="" /></div>
+                <div><input type="file" name="pikachu-file" id="pikachu-file" class="" /></div>
             </div>
             <button class="small-button button"><b>Next</b></button><!-- style="display:none" -->
         </div>
