second rotation finished (needs loads of testing)

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 
  
         <!-- //////////// EXPLANATION / OPEN INQUIRY (PHASE 5) //////////// -->
-        <div id="explanation-introduction" class="text-box-medium" style="display:none">
+        <div id="explanation-instructions" class="text-box-medium" style="display:none">
             <div class="title-container">
                 <span class="highlighted-text"><b>All questions submitted</b><span>
             </div>
@@ -254,7 +254,7 @@
             </div> 
             <button class="small-button button"><b>Next</b></button><!-- style="display:none" -->
         </div>
-
+        <!-- START HERE -->
         <div id="explanation-wait" class="text-box-medium" style="display:none">
             <div class="body-container-large">
                 <div><b>Organism: </b><span class="time-periods-text dynamic-text">some organism</span></div>
